jvimalprasathdev/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>Date when Campaign Member status  = &quot;Application&quot;</description>
        <label>Application</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Score__c</fullName>
        <description>This field stores the Campaign Score contribution for this campaign member record.  If deleted, this value is used to decrement lead score.  If the campaign member is edited, this value will change if rule criteria are now met, or no longer met.</description>
        <inlineHelpText>This field stores the Campaign Score contribution for this campaign member record.  If deleted, this value is used to decrement lead score.  If the campaign member is edited, this value will change if rule criteria are now met, or no longer met.</inlineHelpText>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Call_Back__c</fullName>
        <description>Date when Campaign Member status  = &quot;Contacted - Requested Call Back&quot;</description>
        <label>Contacted - Call Back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_LM__c</fullName>
        <description>Date when Campaign Member status  = &quot;Contacted - LM w/ 3rd Party&quot;</description>
        <label>Contacted - LM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_Made_Offer__c</fullName>
        <description>Date when Campaign Member status  = &quot;Contacted - Made Offer&quot;</description>
        <label>Contacted - Made Offer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Does_Not_Qualify__c</fullName>
        <description>Date when Campaign Member status  = &quot;Does Not Qualify&quot;</description>
        <label>Does Not Qualify</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <description>Date when Campaign Member status = &quot;Follow Up&quot;</description>
        <label>Follow Up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <description>Captures user who last updated Campaign Member status.</description>
        <label>Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Voicemail__c</fullName>
        <description>Date when Campaign Member status  = &quot;Left Voicemail&quot;</description>
        <label>Left Voicemail</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Answer__c</fullName>
        <description>Date when Campaign Member status  = &quot;NEW&quot;</description>
        <label>No Answer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Interested__c</fullName>
        <description>Date when Campaign Member status  = &quot;Not Interested&quot;</description>
        <label>Not Interested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wrong_Number__c</fullName>
        <description>Date when Campaign Member status  = &quot;Wrong Number&quot;</description>
        <label>Wrong Number</label>
        <type>DateTime</type>
    </fields>
    <validationRules>
        <fullName>EmpowerLeadID</fullName>
        <active>true</active>
        <description>Empower Lead ID cannot be NULL if Campaign Member Status is &quot;Application&quot;</description>
        <errorConditionFormula>AND( ISPICKVAL(Status,&quot;Application&quot;) , ISBLANK( Lead.Empower_Lead_ID__c  ) )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Cannot update campaign member status.  Navigate to lead detail page and enter an Empower Lead ID.</errorMessage>
    </validationRules>
</CustomObject>